make BasePhoneActivity the base class to most of the Activity classes
Many of the activities had the same code to do the following:
	set the Orientation
	set the content view
	set the long click listener on the topbar_genesis button

Now the BasePhoneActivity does all this common code

--- a/res/layout/activity_game_local.xml
+++ b/res/layout/activity_game_local.xml
@@ -5,7 +5,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	layout="@layout/include_topbar"/>
 	<include
 	layout="@layout/include_board_names"
-	android:layout_below="@+id/topbar"
+	android:layout_below="@+id/topbar_genesis"
 	style="@style/FillWidth"/>
 	<include
 	layout="@layout/include_board_layout"
