--- a/res/layout/activity_mainmenu.xml
+++ b/res/layout/activity_mainmenu.xml
@@ -5,7 +5,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	layout="@layout/include_topbar"/>
 	<com.chess.genesis.RobotoText
 	android:id="@+id/welcome"
-	android:layout_below="@id/topbar"
+	android:layout_below="@id/topbar_genesis"
 	android:paddingLeft="6dp"
 	android:paddingBottom="3dp"
 	android:textStyle="bold"
