--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<ListView
 	android:id="@android:id/list"
 	style="@style/FillWidth"
-	android:layout_below="@id/topbar"
+	android:layout_below="@id/topbar_genesis"
 	android:layout_above="@id/botbar"/>
 	<include
 	layout="@layout/include_botbar"
