change top and bottom bar to a fixed size using ManualPanel class
In preparation for tablet mode, change the top and bottom bars from
auto scaling to a fixed 50dp. The new bars use an ImageButton. The
background contains the blue color and the src image the contents.

The bar sizeing is done using ManualPanel. Using the "sizes" attr
the child view widths are manually set. For example the following
sizes attr will set the first two views to 1/4 of the total width
and the last view to 1/2.

	sizes="1,1,2/4"

--- a/res/layout/activity_game_local.xml
+++ b/res/layout/activity_game_local.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<include
-	layout="@layout/include_topbar"/>
+	layout="@layout/include_topbar"
+	style="@style/BlueBar"/>
 	<include
 	layout="@layout/include_board_names"
 	android:layout_below="@+id/topbar_genesis"
@@ -12,5 +13,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_below="@+id/board_names"/>
 	<include
 	layout="@layout/include_board_nav"
+	style="@style/BlueBar"
 	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
