--- a/res/layout/include_botbar.xml
+++ b/res/layout/include_botbar.xml
@@ -3,9 +3,10 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
 android:id="@+id/botbar">
-	<com.chess.genesis.MyImageView
-	style="@style/FillWidth"
-	android:src="@drawable/botbar"/>
+	<View
+	android:layout_height="50dp"
+	android:layout_width="fill_parent"
+	android:background="@drawable/bluebar_bot"/>
 	<com.google.ads.AdView
 	android:id="@+id/adView"
 	android:layout_gravity="bottom|center_horizontal"
