--- a/res/layout/activity_msgbox.xml
+++ b/res/layout/activity_msgbox.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	<include
-	layout="@layout/include_topbar"/>
+	layout="@layout/include_topbar"
+	style="@style/BlueBar"/>
 	<ListView
 	android:id="@+id/msg_list"
 	android:layout_below="@id/topbar_genesis"
 	android:layout_above="@+id/input_box"/>
-	<TableRow
+	<com.chess.genesis.ManualPanel
+	panel:sizes="9,4/13"
 	android:id="@+id/input_box"
+	android:layout_width="fill_parent"
 	android:layout_above="@+id/botbar">
 		<com.chess.genesis.RobotoEditText
 		android:id="@+id/new_msg"
-		style="@style/FillWidth"
-		android:layout_weight="82"
 		android:maxLines="3"
 		android:scrollbars="horizontal"
 		android:inputType="textCapSentences|textMultiLine"
 		android:maxLength="320"/>
 		<com.chess.genesis.MyImageView
 		android:id="@+id/submit_msg"
-		style="@style/FillWidth"
-		android:layout_weight="180"
 		android:layout_gravity="center"
 		android:src="@drawable/btn_rsubmit"/>
-	</TableRow>
+	</com.chess.genesis.ManualPanel>
 	<include
 	layout="@layout/include_botbar"
 	android:layout_alignParentBottom="true"/>
