--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<include
-	layout="@layout/include_topbar"/>
+	layout="@layout/include_topbar"
+	style="@style/BlueBar"/>
 	<ListView
 	android:id="@android:id/list"
 	style="@style/FillWidth"
