--- a/res/layout/activity_submitmove.xml
+++ b/res/layout/activity_submitmove.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.MyImageView
+<com.chess.genesis.ManualPanel
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
+style="@style/BlueBar"
+panel:sizes="1,1/2">
+	<ImageButton
 	android:id="@+id/cancel"
-	style="@style/FillWidth"
-	android:layout_weight="50"
+	style="@style/BotBlueBar"
 	android:src="@drawable/btn_cancel"/>
-	<com.chess.genesis.MyImageView
+	<ImageButton
 	android:id="@+id/submit"
-	style="@style/FillWidth"
-	android:layout_weight="50"
+	style="@style/BotBlueBar"
 	android:src="@drawable/btn_submit"/>
-</LinearLayout>
+</com.chess.genesis.ManualPanel>
