--- a/res/layout/include_board_nav.xml
+++ b/res/layout/include_board_nav.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.MyImageView
+<com.chess.genesis.ManualPanel
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
+panel:sizes="3,1,1,1/6">
+	<ImageButton
 	android:id="@+id/place_piece"
-	style="@style/FillWidth"
-	android:layout_weight="243"
-	android:src="@drawable/btn_place_piece"/>
-	<com.chess.genesis.MyImageView
+	style="@style/BotBlueBar"
+	android:src="@drawable/placepiece"/>
+	<ImageButton
 	android:id="@+id/backwards"
-	style="@style/FillWidth"
-	android:layout_weight="398"
-	android:src="@drawable/btn_backwards"/>
-	<com.chess.genesis.MyImageView
+	style="@style/BotBlueBar"
+	android:src="@drawable/backwards"/>
+	<ImageButton
 	android:id="@+id/forwards"
-	style="@style/FillWidth"
-	android:layout_weight="398"
-	android:src="@drawable/btn_forwards"/>
-	<com.chess.genesis.MyImageView
+	style="@style/BotBlueBar"
+	android:src="@drawable/forwards"/>
+	<ImageButton
 	android:id="@+id/current"
-	style="@style/FillWidth"
-	android:layout_weight="398"
-	android:src="@drawable/btn_current"/>
-</TableRow>
+	style="@style/BotBlueBar"
+	android:src="@drawable/current"/>
+</com.chess.genesis.ManualPanel>
