--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -69,14 +69,18 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:singleLine="true"
 	android:maxLength="36"
 	android:inputType="textEmailAddress"/>
-	<com.chess.genesis.MyImageView
+	<Button
 	android:id="@+id/register"
-	android:layout_width="120dp"
+	android:layout_width="110dp"
+	android:layout_height="40dp"
 	android:layout_below="@id/email"
-	android:layout_alignParentRight="true"
-	android:layout_margin="3dp"
-	android:paddingRight="15dp"
-	android:src="@drawable/btn_rsubmit"/>
+	android:layout_alignRight="@id/email"
+	android:layout_marginRight="2dp"
+	android:layout_marginTop="4dp"
+	android:text="Submit"
+	android:textSize="15dp"
+	android:textColor="#fff"
+	android:background="@drawable/btn_green"/>
 	<com.chess.genesis.RobotoText
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
