Initial commit to the tablet layout
The tablet UI is a 3 panel layout with a topbar, content and a botbar.
The starting activity is now StartActivity which checks what layout the
user wants using the "tabletMode" boolean preference and loads either
MainMenuPhone or MainMenuTablet.

The phone UI uses a single fragment per activity and is loaded into
the layout at runtime into R.id.fragment01 framelayout using the
BasePhoneActivity class.

SubmitMove is now a dialog. This allows for the UI to be dissabled
except for the SubmitMove. Makeing SubmitMove a fragment would still
allow the user to modify the UI.

--- a/res/layout/activity_game_online.xml
+++ b/res/layout/activity_game_online.xml
@@ -15,14 +15,12 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 		style="@style/TopBlueBar"
 		android:src="@drawable/chat"/>
 	</com.chess.genesis.ManualPanel>
+	<FrameLayout
+	android:id="@+id/fragment01"
+	android:layout_below="@+id/layout01"
+	android:layout_above="@+id/board_nav"/>
 	<include
-	layout="@layout/include_board_names"
-	android:layout_below="@id/layout01"
-	style="@style/FillWidth"/>
-	<include
-	layout="@layout/include_board_layout"
-	android:layout_below="@+id/board_names"/>
-	<include
+	android:id="@+id/board_nav"
 	layout="@layout/include_board_nav"
 	style="@style/BlueBar"
 	android:layout_alignParentBottom="true"/>
