--- a/res/layout/activity_basephone.xml
+++ b/res/layout/activity_basephone.xml
@@ -7,10 +7,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<FrameLayout
 	android:id="@+id/fragment01"
 	android:layout_below="@+id/topbar_genesis"
-	android:layout_above="@+id/board_nav"/>
+	android:layout_above="@+id/botbar"/>
 	<include
-	android:id="@+id/board_nav"
-	layout="@layout/include_board_nav"
+	layout="@layout/include_botbar"
 	style="@style/BlueBar"
 	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
