--- a/res/layout/fragment_mainmenu.xml
+++ b/res/layout/fragment_mainmenu.xml
@@ -2,12 +2,8 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
-	<include
-	layout="@layout/include_topbar"
-	style="@style/BlueBar"/>
 	<com.chess.genesis.RobotoText
 	android:id="@+id/welcome"
-	android:layout_below="@id/topbar_genesis"
 	android:paddingLeft="6dp"
 	android:paddingBottom="3dp"
 	android:textStyle="bold"
@@ -96,8 +92,8 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	<com.chess.genesis.ManualPanel
 	android:id="@+id/layout01"
 	panel:sizes="1,1/2"
-	android:paddingBottom="3dp"
-	android:layout_above="@id/botbar">
+	android:layout_marginBottom="3dp"
+	android:layout_alignParentBottom="true">
 		<com.chess.genesis.MyImageView
 		android:id="@+id/likefacebook"
 		android:padding="3dp"
@@ -120,7 +116,4 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	android:paddingRight="3dp"
 	android:textSize="10dp"
 	android:text="@string/version"/>
-	<include
-	layout="@layout/include_botbar"
-	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
