--- a/res/layout/fragment_userstats.xml
+++ b/res/layout/fragment_userstats.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<include
-	layout="@layout/include_topbar"
-	style="@style/BlueBar"/>
-	<ScrollView
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:orientation="vertical">
+	<com.chess.genesis.TabText
+	android:id="@+id/tabtxt"
+	android:background="#ff383838"
 	style="@style/FillWidth"
-	android:layout_below="@id/topbar_genesis"
-	android:layout_above="@id/botbar">
+	android:gravity="center"
+	android:padding="6dp"
+	android:text="User Stats"
+	android:textColor="#ffff"
+	android:textSize="14dp"/>
+	<ScrollView
+	style="@style/FillBoth">
 	<RelativeLayout
 	style="@style/FillWidth">
 		<com.chess.genesis.MyImageView
@@ -383,7 +388,4 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		</com.chess.genesis.ExpandablePanel>
 	</RelativeLayout>
 	</ScrollView>
-	<include
-	layout="@layout/include_botbar"
-	android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+</LinearLayout>
