--- a/res/menu/options_gamelist_online.xml
+++ b/res/menu/options_gamelist_online.xml
@@ -2,6 +2,9 @@
 <menu
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
+	android:id="@+id/new_game"
+	android:title="New Game"/>
+	<item
 	android:id="@+id/resync"
 	android:title="Update"/>
 	<item
