--- a/res/layout/gamelist_cell_empty.xml
+++ b/res/layout/gamelist_cell_empty.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-style="@style/FillBoth">
+xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.RobotoText
 	android:id="@+id/nogames"
 	android:layout_centerInParent="true"
+	style="@style/FillWidth"
+	android:gravity="center"
 	android:textStyle="bold"
 	android:textSize="24dp"
 	android:text="No Games"/>
