make long pressing the first menubar pop the fragment stack
Modify MenuBarFrag to take a FragmentActivity so as to have control
over the activity backstack. Also update FragmentIntent to use the
new feature by adding a setActivity function.

--- a/res/layout/fragment_menubar_title.xml
+++ b/res/layout/fragment_menubar_title.xml
@@ -4,6 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis"
 panel:sizes="5,1/6">
 	<ImageButton
+	android:id="@+id/menu_title"
 	style="@style/TopBlueBar"
 	android:src="@drawable/genesischess"/>
 	<ImageButton
