fix deprecation/lint warnings with SDKv17 update
use match_parent instead of fill_parent
use Service.onStartCommand() instead of Service.onStart()
use SparseArray instead of HashMap when keys are int
use BufferedReader instead of DataInputStream

--- a/res/layout/include_botbar.xml
+++ b/res/layout/include_botbar.xml
@@ -5,7 +5,7 @@ xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
 android:id="@+id/botbar">
 	<View
 	android:layout_height="50dp"
-	android:layout_width="fill_parent"
+	android:layout_width="match_parent"
 	android:background="@drawable/bluebar_bot"/>
 	<com.google.ads.AdView
 	android:id="@+id/adView"
