--- a/res/layout/fragment_msgbox.xml
+++ b/res/layout/fragment_msgbox.xml
@@ -18,7 +18,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	<com.chess.genesis.ManualPanel
 	panel:sizes="9,4/13"
 	android:id="@+id/input_box"
-	android:layout_width="fill_parent"
+	android:layout_width="match_parent"
 	android:layout_alignParentBottom="true">
 		<com.chess.genesis.RobotoEditText
 		android:id="@+id/new_msg"
