--- a/res/layout/spinner_dropdown.xml
+++ b/res/layout/spinner_dropdown.xml
@@ -3,7 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 style="?android:attr/spinnerDropDownItemStyle"
 android:layout_height="?android:attr/listPreferredItemHeight"
-android:layout_width="fill_parent"
+android:layout_width="match_parent"
 android:padding="12dp"
 android:textSize="24dp"
 android:textColor="#000000"
