--- a/res/layout/swipetab_fragment.xml
+++ b/res/layout/swipetab_fragment.xml
@@ -19,8 +19,8 @@
 -->
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent">
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 	<com.chess.genesis.RobotoText
 	android:id="@+id/text"
 	android:layout_width="wrap_content"
