--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -10,15 +10,15 @@
 		<item name="android:windowNoTitle">true</item>
 	</style>
 	<style name="FillWidth">
-		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 	</style>
 	<style name="FillBoth">
-		<item name="android:layout_width">fill_parent</item>
-		<item name="android:layout_height">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">match_parent</item>
 	</style>
 	<style name="BlueBar">
-		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">50dp</item>
 	</style>
 	<style name="NoDimDialog" parent="@android:style/Theme.Panel">
@@ -29,14 +29,14 @@
 	</style>
 	<style name="TopBlueBar">
 		<item name="android:layout_height">50dp</item>
-		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
 		<item name="android:padding">9dp</item>
 		<item name="android:scaleType">fitCenter</item>
 		<item name="android:background">@drawable/btn_bluebar_top</item>
 	</style>
 	<style name="BotBlueBar">
 		<item name="android:layout_height">50dp</item>
-		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_width">match_parent</item>
 		<item name="android:padding">9dp</item>
 		<item name="android:scaleType">fitCenter</item>
 		<item name="android:background">@drawable/btn_bluebar_bot</item>
