--- a/res/menu/options_game_online_draw.xml
+++ b/res/menu/options_game_online_draw.xml
@@ -13,4 +13,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/draw"
 	android:title="Offer Draw"/>
+	<item
+	android:id="@+id/online_details"
+	android:title="Game Details"/>
 </menu>
