add height_policy to ManualPanel to control the child/parent sizes
ManualPanel would set the height for each child view to the size of
the largest child and the ManualPanel to the size requested by the
parent view. This doesn't allow for setting the child views to match
the size of the ManualPanel. Add three height sizing policies:

exact_child:
	set each child to the size it wants to be given the width restrictions
	set the ManualPanel to the size of the largest child view
largest_child:
	set all child views and the ManualPanel to the size of the largest child view
match_parent:
	set all child views and the ManualPanel to the size requested by the parent view

Set the center ManualPanel of the tablet layout to match_parent to fix the
sizing issue where the "No Games" view was not being centered.

--- a/res/layout/activity_tablet.xml
+++ b/res/layout/activity_tablet.xml
@@ -15,6 +15,7 @@ xmlns:panel="http://schemas.android.com/apk/res/com.chess.genesis">
 	</com.chess.genesis.view.ManualPanel>
 	<com.chess.genesis.view.ManualPanel
 	panel:sizes="2,3,2/7"
+	panel:height_policy="match_parent"
 	android:layout_below="@+id/topbar00"
 	android:layout_above="@+id/botbar00">
 		<FrameLayout
