--- a/res/menu/options_game_online.xml
+++ b/res/menu/options_game_online.xml
@@ -11,6 +11,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/nudge_resign"
 	android:title="Nudge/Resign"/>
 	<item
+	android:id="@+id/draw"
+	android:title="Offer Draw"/>
+	<item
 	android:id="@+id/online_details"
 	android:title="Game Details"/>
 </menu>
