change board flip animation to use Flip & zoom animation
Instead of just rotating, add a zoom to the rotation to make the
animation look more like a flip. The code for the flip animation
classes (AnimationFactory and FlipAnimation) were found at

http://code.google.com/p/android-3d-flip-view-transition/

--- a/res/layout/fragment_game.xml
+++ b/res/layout/fragment_game.xml
@@ -18,7 +18,7 @@ android:orientation="vertical">
 		android:padding="6dp"
 		android:textSize="14dp"/>
 	</com.chess.genesis.view.ManualPanel>
-	<com.chess.genesis.view.ViewFlip3D
+	<ViewFlipper
 	style="@style/FillWidth"
 	android:id="@+id/board_flip">
 		<com.chess.genesis.view.BoardLayout
@@ -27,5 +27,5 @@ android:orientation="vertical">
 		<com.chess.genesis.view.PlaceLayout
 		android:layout_gravity="top|center_horizontal"
 		android:id="@+id/place_layout"/>
-	</com.chess.genesis.view.ViewFlip3D>
+	</ViewFlipper>
 </LinearLayout>
