add CapturedLayout to show captured pieces below the board
CapturedLayout shows the captured pieces using a row of 11 PieceImg.
The left 5 are captured black pieces, the right 5 are captured white.
There is one empty spacing piece. Highest value pieces are added from
the edge.

The displaying of the captured pieces can be disabled in settings.
PrefKey.SHOW_CAPTURED is the preference key for the setting.

--- a/res/layout/fragment_game.xml
+++ b/res/layout/fragment_game.xml
@@ -28,4 +28,8 @@ android:orientation="vertical">
 		android:layout_gravity="top|center_horizontal"
 		android:id="@+id/place_layout"/>
 	</ViewFlipper>
+	<com.chess.genesis.view.CapturedLayout
+	android:id="@+id/captured_count"
+	panel:height_policy="exact_child"
+	panel:sizes="1/11"/>
 </LinearLayout>
